--- a/build.gradle
+++ b/build.gradle
@@ -41,11 +41,12 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:1.5.15.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-aop:1.5.15.RELEASE'
     compile 'org.springframework.boot:spring-boot-configuration-processor:1.5.15.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.15.RELEASE'
 
     // etc module
     compile 'org.projectlombok:lombok:1.18.2'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.8'
-    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.1.8'
+    compile 'ch.qos.logback:logback-classic:1.1.8'
+    compile 'ch.qos.logback:logback-core:1.1.8'
 }
 
 buildscript {
