[pretest2] csv 파일 읽기 설정. 컨트롤러, 서비스, 엔터티 구성

--- a/build.gradle
+++ b/build.gradle
@@ -33,20 +33,24 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    compile('org.springframework.boot:spring-boot-starter:1.5.15.RELEASE') {
+    compile('org.springframework.boot:spring-boot-starter:1.5.19.RELEASE') {
         exclude(module: 'commons-logging')
     }
 
     // spring module
-    compile 'org.springframework.boot:spring-boot-starter-web:1.5.15.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-aop:1.5.15.RELEASE'
-    compile 'org.springframework.boot:spring-boot-configuration-processor:1.5.15.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.15.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:1.5.19.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-aop:1.5.19.RELEASE'
+    compile 'org.springframework.boot:spring-boot-configuration-processor:1.5.19.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.19.RELEASE'
 
     // etc module
-    compile 'org.projectlombok:lombok:1.18.2'
+    compile 'org.projectlombok:lombok:1.18.4'
     compile 'ch.qos.logback:logback-classic:1.1.8'
     compile 'ch.qos.logback:logback-core:1.1.8'
+    compile 'com.h2database:h2:1.4.199'
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'commons-io:commons-io:2.5'
+    compile 'com.opencsv:opencsv:4.4'
 }
 
 buildscript {
@@ -54,7 +58,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.15.RELEASE"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.19.RELEASE"
     }
 }
 
