--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -3,3 +3,6 @@ server:
   server-header: Local Kakaopay Pretest 2 Server
   filter:
     cors: true
+
+logging:
+  config: classpath:logging/logback-local.xml
