--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,4 +5,7 @@ app:
 spring:
   datasource:
     initialize: false
-
+  http:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 20MB
