[pretest2] 테스트 코드 추가, 데이터 별 repository 세분화 및 customize

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     // spring module
     compile 'org.springframework.boot:spring-boot-starter-web:1.5.19.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-aop:1.5.19.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-test:1.5.19.RELEASE'
     compile 'org.springframework.boot:spring-boot-configuration-processor:1.5.19.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.19.RELEASE'
 
