--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'commons-io:commons-io:2.5'
     compile 'com.opencsv:opencsv:4.4'
+    compile 'io.springfox:springfox-swagger2:2.9.2'
+    compile 'io.springfox:springfox-swagger-ui:2.9.2'
 }
 
 buildscript {
