--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile 'com.opencsv:opencsv:4.4'
     compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
+    compile 'io.jsonwebtoken:jjwt:0.7.0'
 }
 
 buildscript {
